# python_course

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
0x00/: README.md
0x00/snippets/: about_setup.py  hello_script.py  hello_world.py
0x01/: README.md
0x01/polls/: README.md
0x01/preparation/: hello_world.py  print_python_setup.py
0x01/snippets/: a_hello_world_explained.py  b_python_basics.py  study_hello_script.py  study_more_teaser.py  turtle_coast_a_task_template.py
0x01/solutions/: big_pea_one_solution.py  bronze_strand_one_solution.py  eastern_sands_one_solution.py  hints.md  moving_blizzard_next_solution_part_1.py  pin_keek_one_solution.py  poke_peach_one_solution.py  sunny_coastline_one_solution.py
0x02/: README.md
0x02/snippets/: a_lists.py  a_primitives.py  b_collections.py  c_functions.py  d_control_flow.py  e_comprehensions.py  study_collection_ops.py  study_comprehensions.py  study_debugging.py  study_int_ids.py  study_more_collections.py  study_testing.py  xpert_debugging.py  xpert_int_internals.py  xpert_more_collections.py
0x02/solutions/: bella_zinnia_one_solution.py  buxrose_edge_one_solution.py  coral_cove_one_solution.py  hints.md  moving_blizzard_next_solution_part_2.py  wild_vine_one_solution.py
0x03/: README.md
0x03/snippets/: a_class_basics.py  b_members.py  b_properties.py  c_operations.py  d_enums.py  e_dataclass.py  f_class_level_methods.py  g_single_inheritance.py  preview_getattribute.py  study_common_pitfalls.py  study_custom_exceptions.py  study_flags.py  study_more_instantiation.py  study_slotted_named.py  xpert_slotted_named.py
0x03/solutions/: blue_strand_one_solution.py  canoe_hair_one_solution.py  drift_pebble_one_solution.py  hints.md  moving_blizzard_next_solution_part_3.py  tall_leaf_one_solution.py  weymis_bay_one_solution.py  whale_coastline_one_solution.py
0x04/: README.md
0x04/data/: tinted_coast_example2.txt  tinted_coast_input.txt  tortoise_cove_input.txt
0x04/snippets/: a_prepare.py  a_solve_it.py  a_typing.py  b_unpacking.py  c_args.py  d_mi_basics.py  e_mi_super_call.py  f_mi_super_args.py  g_abc.py  h_mixins.py  i_protocols.py  study_class_explosion.py  study_inheritance_vs_composition.py  study_overload.py  study_protocols.py  study_typing_advanced.py  study_using_composition.py  xpert_typing_advanced.py  xpert_using_policies.py
0x04/solutions/: butterfly_hops_one_solution_part1.py  butterfly_hops_one_solution_part2.py  cornwin_bay_one_solution.py  hints.md  lonely_searont_one_solution.py  moving_blizzard_next_solution_part_4.py  shrimp_edge_one_solution.py  tinted_coast_one_solution.py
0x05/: README.md
0x05/snippets/: a_recap.py  b_variances.py  c_iterators.py  d_generators.py  study_functional.py  study_itertools.py  xpert_generator_send.py  xpert_more_variances.py
0x05/solutions/: duck_corn_one_solution.py  exam_rsa_one_solution.py  hints.md  moving_blizzard_next_solution_part_5.py  rash_annie_one_solution.py  red_berry_one_solution.py
0x06/: README.md
0x06/snippets/: a_globals_locals.py  b_import.py  b_the_module.py  c_scope_legb.py  d_mi_basics.py  d_scope_non_legb.py  e_lambdas.py  f_reduce_filter_map_gen.py  g_abc.py  g_file_io.py  h_feature_context_manager.py  h_mixins.py  i_match.py  ihk_exam_sample.txt  study_argparse.py  study_match.py  study_pickle.py  study_reduce_filter_map_gen.py  study_subprocess.py  study_using_composition.py  study_using_policies.py  xpert_json.py  xpert_regex.py
0x06/solutions/: ancestor_clove_one_solution.py  barren_grass_one_solution.py  butterfly_hops_one_solution_part1.py  butterfly_hops_one_solution_part2.py  cornwin_bay_one_solution.py  drowsy_pudina_one_solution.py  eastern_rye_one_solution.py  hints.md  moon_ragweed_one_solution.py  (+3 more)
0x07/: README.md
0x08/: README.md
0x09/: README.md
0x0a/: README.md
0x0b/: README.md
0x0c/: README.md
0x0d/: README.md
0x_tra_gropros/: README.md
0x_tra_puzzles/: README.md
0x_tra_test/: README.md
0x_tra_unit/: README.md
docker/: Dockerfile  dockerfile  requirements.txt
docs/: Questionare.md
gropro/: __init__.py  ipo.py
utils/: __init__.py  concurrency.py  printing.py
(+472 files in other folders)
