[project]
name = "python_course"
version = "2.0.2"
authors = [
  { name="Alexander Voß", email="info@codebasedlearning.dev" },
]
description = "Python Course – CodeBasedLearning – FH Aachen"
keywords = [
  "cbl",
  "codebasedlearning",
  "learning",
  "education",
  "examples",
  "tutorial",
  "python"
]
readme = "README.md"
license = { file="LICENSE" }
# for 3.14 or 3.14t you need to change .python-version
# rm -rf .venv (unix), uv sync
requires-python = ">=3.14"
dependencies = [
    "cbl==1.0.1",
    "contextvars==2.4",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "pytest==9.0.3",
    "ruff==0.15.16",
    "ty>=0.0.44",
    "typer==0.25.1",
    "scipy-stubs~=1.17.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",   # Cf. Warning see below.
]

[project.urls]
Homepage = "https://github.com/codebasedlearning/python_course"
Repository = "https://github.com/codebasedlearning/python_course"
Issues = "https://github.com/codebasedlearning/python_course/issues"

# Needed for imports when running the script outside of PyCharm, e.g. with
#   uv run path-to-script
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E701"]

[tool.mypy]
check_untyped_defs = true

[tool.pytest.ini_options]
# A known vulnerability, like CVE-2025-71176, is a non-issue in practice
# for a university course where students run pytest locally on their own machines.
tmp_path_retention_policy = "none"
